Fix vertical spacing of icon buttons

--- a/frontend/app/styles/app.less
+++ b/frontend/app/styles/app.less
@@ -14,6 +14,10 @@
   margin-top: @padding-large-vertical;
 }
 
+.stromx-margin-left {
+  margin-left: @padding-base-horizontal;
+}
+
 .stromx-stream-view {
   max-height: 300px;
   overflow: auto;
